
    * Ukrainian translation
      yurchor <yurchor@ukr.net> 
      Sugar Labs i18n team <https://translate.sugarlabs.org/accounts/yurchor/>

  * Bug Fixes
    ---------
    * Crash if any "mosaic" magic tool used, Xubuntu 15.10
      If the PNG patterns used to generate the effect were compressed
      the wrong(lossy) way, the program will crash
      (SF.net Bug #210)

  * Other Improvements:
    -------------------
    * Reformatted source code via GNU Indent tool; should
      greatly increase code readability and formatting consistency.

2014.August.5 (0.9.22)

  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Arunodai Reddy Vudem (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Pattern - Draws a tiled pattern around the picture.
      Perspective - Change the image's perspective.
      Mosaic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Tiles - Draws a symettric pattern around the picture.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Symmetry Left/Right, Symmetry Up/Down - Paint with relfective symmetry
      across the horizontal or vertical center of the image.
      (Like Kaleidoscope, but only one mirrored brush, either left/right
      or up/down.)

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)
