@@ -1053,6 +1053,9 @@ $Id$
   * Mac OS X coding and builds
     Martin Fuhrer <mfuhrer@users.sourceforge.net>
     Darrell Walisser <walisser@mac.com>  [retired]
+    Eric Poncet <http://www.linguasoft.com/>
+    Harvey Ginter <harveyginter@gmail.com>
+	Mark K. Kim <mkkim214@gmail.com>
 
   * Maemo (Nokia 770 and N880) coding and builds
     Alessandro Pasotti <apasotti@gmail.com>
